java neicun xielou

--- a/计算机网络八股.md
+++ b/计算机网络八股.md
@@ -205,7 +205,7 @@ HTTP响应速度快，HTTPS消耗资源多，响应速度慢，需要验证CA证
 1. 客户端和服务端通过443端口建立TCP连接
 2. 客户端发送支持的加密算法，SSL版本号，随机数等信息
 3. 服务端选取合适的加密算法和SSL版本，发送自己的公钥和CA证书
-4. 客户端收到后，验证CA证书是否受信任，是否过期，CA公钥能否解密证书上的数字签名，解密之后的值是否和服务端公钥相同。完成验证后，客户端生成对称密钥，并用服务端公钥加密后，发送给服务端
+4. 客户端收到后，验证CA证书是否受信任，是否过期，CA公钥能否解密证书上的数字签名。完成验证后，客户端生成对称密钥，并用服务端公钥加密后，发送给服务端
 5. 服务端收到加密后的对称密钥，用自己的私钥解密。至此双方都拥有对称密钥了。
 6. 双方再发送一条表示握手结束的通知消息，用对称密钥加密。如果双方验证加密解密都没问题。HTTPS传输就正式建立成功了。
 
