--- a/数据库八股.md
+++ b/数据库八股.md
@@ -84,3 +84,42 @@ Serializable（可串行化）：避免所有问题，但效率很低
 2. 更新异常。
 
 一般表的设计满足3NF就够了。
+
+# 数据库的并发场景和解决方案
+
+1. 事务A在增删改时，事务B也进行增删改
+   1. 解决办法：不需要解决。InnoDB自动为增删改的事务添加排他锁，事务B会阻塞直到锁释放，所以无需在代码中做修改。
+2. 事务A在查询时，事务B进行增删改
+   1. 解决办法：不需要解决。RepeatableRead的隔离级别保证事务A不会读到事务B修改的数据。
+3. 事务A先查，再更新同一张表。事务B也先查，再更新同一张表。B比A先提交，那A的更新就丢失了。
+   1. 解决办法：给A的查询语句添加排他锁。(此处不能加共享锁，否则会造成死锁)
+
+# 加锁原则
+
+拿MySql的InnoDB引擎来说，对于`insert`、`update`、`delete`等操作。会自动给涉及的数据加排他锁；
+
+对于一般的`select`语句，InnoDB不会加任何锁，事务可以通过以下语句给显示加共享锁或排他锁。
+
+共享锁：`SELECT ... LOCK IN SHARE MODE;`
+
+排他锁：`SELECT ... FOR UPDATE;`
+
+# MVCC在MySQL的InnoDB中的实现
+
+在InnoDB中，会在每行数据后添加两个额外的隐藏的值来实现MVCC，这两个值一个记录这行数据何时被创建，另外一个记录这行数据何时过期（或者被删除）。 在实际操作中，存储的并不是时间，而是事务的版本号，每开启一个新事务，事务的版本号就会递增。 在可重读Repeatable reads事务隔离级别下：
+
+- SELECT时，读取创建版本号<=当前事务版本号，删除版本号为空或>当前事务版本号。
+- INSERT时，保存当前事务版本号为行的创建版本号
+- DELETE时，保存当前事务版本号为行的删除版本号
+- UPDATE时，插入一条新纪录，保存当前事务版本号为行创建版本号，同时保存当前事务版本号到原来删除的行
+
+MVCC解决了快照读的不可重复读和幻读的问题。
+
+对于当前读，仍然会有幻读问题。通过Next-key Lock 解决:
+
+如果id列上有唯一索引：会加行锁
+
+如果id列上是非唯一索引：加Gap锁
+
+如果id列上没有索引：直接锁住整张表
+
