--- a/计算机网络八股.md
+++ b/计算机网络八股.md
@@ -318,7 +318,7 @@ content-length：请求体长度
 1. 1xx状态码：要求请求者继续 100 Continue
 2. 2xx状态码：操作成功。200 OK
 3. 3xx状态码：重定向。301 永久重定向（搜索引擎会替换旧网址）；302暂时重定向（搜索引擎会保留旧网址）
-4. 4xx状态码：客户端错误。400 Bad Request；401 Unauthorized；403 Forbidden；404 Not Found；
+4. 4xx状态码：客户端错误。400 Bad Request；401 Unauthorized（客户端可以携带验证消息再次请求）；403 Forbidden（客户端的请求被拒绝，不应该再次发送请求）；404 Not Found；
 5. 5xx状态码：服务端错误。500服务器内部错误；501服务不可用
 
 301：永久重定向。原地址的资源已经被永久移到了新地址，并且将来对该资源的引用都应该使用本响应返回的URI之一。客户端下次请求该资源最好用新的URI
