--- a/数据库八股.md
+++ b/数据库八股.md
@@ -6,22 +6,17 @@
 
 ### 索引的分类
 
-聚集索引
+聚集索引：
 
-索引结构和数据在一起存放的索引。主键索引就是聚集索引
+​	主键索引
 
-非聚集索引
+非聚集索引：
 
-索引结构和数据分开存放的索引。辅助索引都是非聚集索引
+​	唯一索引
 
-辅助索引包含：唯一索引，普通索引等
+​	普通索引
 
-### 索引失效场景
-
-1. or前后有字段没加索引
-2. like以%开头
-3. 联合索引违反最左匹配原则：
-   1. 使用顺序必须是从左到右，中途有索引没用到（或使用范围查询），则之后的索引都不会被用到。
+​	前缀索引
 
 ### B+tree和B tree区别
 
@@ -31,6 +26,27 @@ B+Tree中间节点只存key值，对record的索引全部在叶子节点。
 2. 范围查询更快，只需要遍历叶子节点
 3. 查询效率更稳定
 
+
+### 什么样的列适合创建索引
+
+1. 频繁需要查找的
+2. 频繁作为where条件字段的
+3. 频繁需要排序的
+4. 不为null的字段
+5. 频繁更新的字段不适合做索引
+6. 尽量建立联合索引而非单列索引
+
+### 索引失效场景
+
+1. 联合索引违反最左匹配原则：
+   1. 使用顺序必须是从左到右，中途有索引没用到（或使用范围查询），则之后的索引都不会被用到。
+2. 在索引上做计算或使用函数
+3. like以通配符开头
+4. or语句左右用到的索引不一样
+
+### 什么时候优化器会决定不使用索引
+
+当对普通索引进行范围查找全部数据时，需要回表查主键索引。虽然普通索引是有序的，但主键索引无序。如果仍旧使用普通索引，就需要做对于主键的大量离散读。所以优化器会决定直接使用主键索引。
 
 
 # MyISAM和InnoDB引擎的区别：
@@ -81,6 +97,8 @@ Serializable（可串行化）：避免所有问题，但效率很低
 
 server层+存储引擎层
 
+server层有连接器，校验器（校验sql语法），优化器（选择用什么索引），执行器
+
 存储引擎层有buffer pool 做缓存。需要读写的数据页如果在buffer pool中，就直接读写。
 
 如果写操作需要的数据页不在buffer pool中，就将操作写在change buffer中，减少insert和update操作带来的磁盘IO。等读到这个数据页，再将change buffer中的写操作执行，然后返回。（但对于唯一索引的操作，还是会先读再写）
@@ -113,24 +131,43 @@ undo log
 
 排他锁：`SELECT ... FOR UPDATE;`
 
-表锁 行锁
+1. 按范围分：表锁，行锁，间隙锁
+2. 按功能分：共享锁，排他锁，意向锁
 
-乐观锁
+### RR隔离级别的4种加锁场景
 
-认为修改冲突很少会发生。通过CAS或者版本号实现
-
-悲观锁
-
-认为修改冲突经常会发生。通过加锁实现
+1. id是主键索引或唯一索引，有满足条件的记录。行锁
+   1. （如果id是唯一索引，还要回表去把主键索引加锁）
+2. id是主键索引或唯一索引，没有满足条件的记录。gap锁
+3. id是非唯一索引，有满足条件的记录。行锁+gap锁
+4. id是非唯一索引，没有满足条件的记录。gap锁
 
 # MVCC
 
-在InnoDB中，会在每行数据后添加两个额外的隐藏的值来实现MVCC，这两个值一个记录这行数据何时被创建，另外一个记录这行数据何时过期（或者被删除）。 在实际操作中，存储的并不是时间，而是事务的版本号，每开启一个新事务，事务的版本号就会递增。 在可重读Repeatable reads事务隔离级别下：
+MVCC通过隐藏字段，ReadView，undolog实现。
 
-- SELECT时，读取创建版本号<=当前事务版本号，删除版本号为空或>当前事务版本号。
-- INSERT时，保存当前事务版本号为行的创建版本号
-- DELETE时，保存当前事务版本号为行的删除版本号
-- UPDATE时，插入一条新纪录，保存当前事务版本号为行创建版本号，同时保存当前事务版本号到原来删除的行
+每个记录都有两个隐藏字段，事务ID和指向undolog中记录旧版本的指针。
+
+对于可重复读，是事务开始时创建ReadView，对于不可重复读，是执行每条SQL语句前创建新的ReadView。
+
+ReadView包含四个字段：
+
+1. 当前事务的id
+2. 当前所有活跃事务的id列表
+3. 当前活跃事务最小id
+4. 当前活跃事务最大id
+
+当执行读操作时，如果记录的事务id小于min_id，说明该记录在当前事务创建前就已经被修改完成了，是可见的。
+
+如果记录的事务id大于max_id，说明该记录在当前事务开启后又被修改了,是不可见的。
+
+如果记录的事务id在最大最小之间，并且在活跃事务列表中，说明这个事务未提交，是不可见的。
+
+如果不在活跃事务列表中，说明这个事务已提交，是可见的。
+
+（总结：可读的数据的事务id小于max且不在list中）
+
+如果记录不可读，会顺着指针找到undolog中第一个可读的记录。
 
 MVCC解决了快照读的不可重复读和幻读的问题。
 
@@ -144,7 +181,11 @@ MVCC解决了快照读的不可重复读和幻读的问题。
 
 
 
+# 优化查询语句
 
+1. explain语句
+   1. 查看使用的索引
+   2. 扫描的行数
 
 # [数据库三大范式](https://www.cnblogs.com/lixingleon/p/15468833.html)
 
